src/main/resources/sf-resource/SfClientPkgs/objects/PackageInformation__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Retrieved_Time__c</fullName>
        <label>Package Retrieved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadyForDeployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ReleaseInformation__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ReleaseInformation__c</referenceTo>
        <relationshipLabel>PackageInformations</relationshipLabel>
        <relationshipName>PackageInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deployment Packages</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>